// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> component should render the tag with variant outlined, color blue, border squared, size small, isClickable as true, isDisabled as false, onClick and onClose 1`] = `
.emotion-0 {
  font-size: 0.625rem;
  font-weight: 700;
  line-height: 0.875rem;
  padding: 2px 8px;
  height: 18px;
  border: 1px solid #008DFC;
  color: #008DFC;
  background-color: #E8F4FF;
  border-color: #008DFC;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-transform: uppercase;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  gap: 4px;
  border-radius: 0px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.emotion-0:hover {
  border-color: #000E40;
  background-color: #E8F4FF;
  color: #000E40;
}

<div
  aria-disabled="false"
  class="emotion-0 emotion-1"
  color="blue"
  data-testid="tag"
>
  Click me
</div>
`;

exports[`<Tag /> component should render the tag with variant solid, color grey, border rounded, size medium, isClickable as false, isDisabled as false, onClick and onClose 1`] = `
.emotion-0 {
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  padding: 8px 12px;
  height: 32px;
  border: 0;
  color: #FFFFFF;
  background-color: #838383;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-transform: uppercase;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  gap: 4px;
  border-radius: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.emotion-0:hover {
  background-color: #131313;
  color: #FFFFFF;
}

<div
  aria-disabled="false"
  class="emotion-0 emotion-1"
  color="grey"
  data-testid="tag"
>
  Click me
</div>
`;

exports[`<Tag /> component should render the tag with variant solid, color grey, border rounded, size medium, isClickable as false, isDisabled as false, onClick and onClose 2`] = `
.emotion-0 {
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  padding: 8px 12px;
  height: 32px;
  border: 0;
  color: #FFFFFF;
  background-color: #838383;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-transform: uppercase;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  gap: 4px;
  border-radius: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  background-color: #131313;
  color: #FFFFFF;
}

.emotion-2 {
  background-color: transparent;
  color: currentColor;
  display: inherit;
  border: 0;
  cursor: pointer;
  border-radius: 16px;
}

.emotion-2:hover {
  background-color: #FFFFFF;
  color: #131313;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

<div
  aria-disabled="false"
  class="emotion-0 emotion-1"
  color="grey"
  data-testid="tag"
>
  Click me
  <button
    aria-disabled="false"
    class="emotion-2 emotion-3"
    color="grey"
    data-testid="tag-close-button"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 24 24"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`<Tag /> component should render the tag with variant solid, color grey, border rounded, size medium, isClickable as false, isDisabled as true, onClick and onClose 1`] = `
.emotion-0 {
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  padding: 8px 12px;
  height: 32px;
  border: 0;
  color: #FFFFFF;
  background-color: #C1C1C1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-transform: uppercase;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  gap: 4px;
  border-radius: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.emotion-2 {
  background-color: transparent;
  color: currentColor;
  display: inherit;
  border: 0;
  cursor: pointer;
  border-radius: 16px;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

<div
  aria-disabled="true"
  class="emotion-0 emotion-1"
  color="grey"
  data-testid="tag"
>
  Click me
  <button
    aria-disabled="true"
    class="emotion-2 emotion-3"
    color="grey"
    data-testid="tag-close-button"
    disabled=""
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 24 24"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`<Tag /> component should render the tag with variant solid, color primary, border rounded, size medium, isClickable as false, isDisabled as false, onClick and onClose 1`] = `
.emotion-0 {
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  padding: 8px 12px;
  height: 32px;
  border: 0;
  color: #FFFFFF;
  background-color: #00677F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-transform: uppercase;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  gap: 4px;
  border-radius: 32px;
}

<div
  aria-disabled="false"
  class="emotion-0 emotion-1"
  color="primary"
  data-testid="tag"
>
  Click me
</div>
`;
